[package]
name = "waldo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "4.1.6", features = ["derive"] }
swc = "0.245.31"
swc_common = { version="0.29.31", features=["tty-emitter"] }
swc_core = { version="0.59.34", features=["ecma_ast"] }
swc_ecma_parser = "0.124.10"
swc_ecma_utils = "0.107.10"
swc_ecma_visit = "0.82.6"
wasmparser = "0.81.0"
